# dbb-ranking-parser

./: .gitignore  .travis.yml  CHANGES.rst  Dockerfile  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yml
dbbrankingparser/: __init__.py  cli.py  conversion.py  document.py  http.py  httpclient.py  httpserver.py  main.py
docker/cli/: Dockerfile
docker/httpserver/: Dockerfile
src/dbbrankingparser/: __init__.py  cli.py  conversion.py  document.py  httpclient.py  httpserver.py  main.py
tests/: test_cli.py  test_cli_serve.py  test_document.py  test_httpclient.py  test_httpserver_args.py  test_rankingparser.py
