[build-system]
requires = [
    "setuptools >= 51.1.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = ["tests"]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
lines-after-imports = 2
order-by-type = false
