[project]
name = "dbb-ranking-parser"
version = "0.5.0-dev"
description = "Extract league rankings from the DBB (Deutscher Basketball Bund e.V.) website."
readme = "README.rst"
authors = [
    { name = "Jochen Kupperschmidt", email = "homework@nwsnet.de" }
]
license = { text = "MIT" }
keywords = [ "basketball", "rankings", "scrape" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Other/Nonlisted Topic",
]
requires-python = ">=3.9"
dependencies = [
    "lxml>=5.3.0",
]

[project.scripts]
dbb-ranking-parser = "dbbrankingparser.cli:main"

[project.urls]
Website = "http://homework.nwsnet.de/releases/4a51/#dbb-ranking-parser"
"Repository (GitHub)" = "https://github.com/btb-royals/dbb-ranking-parser"
"Repository (Sourcehut)" = "https://sr.ht/~homeworkprod/dbb-ranking-parser/"
Changelog = "https://github.com/btb-royals/dbb-ranking-parser/blob/main/CHANGES.rst"

[build-system]
requires = [
    "setuptools >= 51.1.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = ["tests"]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
lines-after-imports = 2
order-by-type = false
